<resources>
    <string name="app_name">Pathfinder-FR</string>
    <string name="title_item_detail">Détails</string>
    <string name="title_activity_main">Pathfinder FR</string>
    <string name="title_activity_load_data">Mise à jour des données</string>
    <string name="title_activity_treasure">Générateur de trésors</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="title_activity_generate_pdf">Feuille de personnage (PDF)</string>
    <string name="navigation_drawer_open">Ouvrir la navigation latérale</string>
    <string name="navigation_drawer_close">Fermer la navigation latérale</string>
    <string name="nav_header_title">Pathfinder-FR</string>
    <string name="nav_header_subtitle">www.pathfinder-fr.org</string>
    <string name="nav_header_desc">En-tête de navigation</string>
    <string name="action_settings">Paramètres</string>
    <string name="itemdetails_quickaction">Actions:</string>
    <string name="itemdetails_alert_message">Exemple de message d\'avertissement</string>
    <string name="itemdetails_openurl_failed">Échec de l\'ouverture du navigateur.</string>
    <string name="nocharacter_selected_failed">Pour utiliser cette action, veuillez épingler un personnage à partir de l\'action correspondante sur sa fiche!</string>
    <string name="generic_failed">Élément introuvable (opération échouée)!</string>
    <string name="favorite_added_success">Favori ajouté avec succès!</string>
    <string name="favorite_removed_success">Favori retiré avec succès!</string>
    <string name="favorite_added_failed">Échec de l\'ajout en tant que favori!</string>
    <string name="favorite_removed_failed">Échec de la suppression du favori!</string>
    <string name="feat_added_success">Don ajouté à %s avec succès!</string>
    <string name="feat_removed_success">Don retiré de %s avec succès!</string>
    <string name="feat_added_failed">Échec de l\'ajout du don au personnage!</string>
    <string name="feat_removed_failed">Échec du retrait du don du personnage!</string>
    <string name="trait_added_success">Trait racial alternatif ajouté à %s avec succès!</string>
    <string name="trait_removed_success">Trait racial alternatif retiré de %s avec succès!</string>
    <string name="trait_added_failed">Échec de l\'ajout du trait racial alternatif au personnage!</string>
    <string name="trait_removed_failed">Échec du retrait du trait racial alternatif du personnage!</string>
    <string name="ability_auto">Cette aptitude est automatique et n\'a pas besoin d\'être ajoutée!</string>
    <string name="ability_added_success">Aptitude ajoutée à %s avec succès!</string>
    <string name="ability_removed_success">Aptitude retirée de %s avec succès!</string>
    <string name="ability_added_failed">Échec de l\'ajout de l\'aptitude au personnage!</string>
    <string name="ability_removed_failed">Échec du retrait de l\'aptitude du personnage!</string>
    <string name="weapon_added_success">Arme ajoutée à %s avec succès!</string>
    <string name="weapon_added_failed">Échec de l\'ajout de l\'arme au personnage!</string>
    <string name="armor_added_success">Armure ajoutée à %s avec succès!</string>
    <string name="armor_added_failed">Échec de l\'ajout de l\'armure au personnage!</string>
    <string name="equipment_added_success">Équipement ajouté à %s avec succès!</string>
    <string name="equipment_added_failed">Échec de l\'ajout de l\'équipement au personnage!</string>
    <string name="magicitem_added_success">Objet magique ajouté à %s avec succès!</string>
    <string name="magicitem_added_failed">Échec de l\'ajout de l\'objet magique au personnage!</string>
    <string name="skill_added_auto">Cette compétence de classe ne peut être retirée car elle est obtenue grâce à l\'une de vos classes!</string>
    <string name="skill_added_success">Compétence de classe ajoutée à %s avec succès!</string>
    <string name="skill_removed_success">Compétence de classe retirée à %s avec succès!</string>
    <string name="skill_added_failed">Échec lors de l\'ajout de la compétence de classe!</string>
    <string name="skill_removed_failed">Échec lors du retrait de la compétence de classe!</string>
    <string name="toolbar_search">Saisir du texte pour filtrer...</string>
    <string name="welcome_copyright">Cette application et ses contenus utilisent des marques déposées
        et/ou des copyrights appartenant à Paizo Publishing, LLC selon les règles de la Community
        Use Policy de Paizo. Il nous est expressément interdit de rendre payant l’utilisation ou
        l’accès à son contenu. Les données sont issues du site www.pathfinder-fr.org.</string>
    <string name="navigation_item_home">Accueil</string>
    <string name="navigation_item_favorites">Favoris</string>
    <string name="navigation_item_sheets">Personnages</string>
    <string name="navigation_item_traits">Traits</string>
    <string name="navigation_item_skills">Compétences</string>
    <string name="navigation_item_feats">Dons</string>
    <string name="navigation_item_abilities">Aptitudes</string>
    <string name="navigation_item_spells">Sorts</string>
    <string name="navigation_item_weapons">Armes</string>
    <string name="navigation_item_armors">Armures</string>
    <string name="navigation_item_equipment">Équipement</string>
    <string name="navigation_item_magic_items">Objets magiques</string>
    <string name="navigation_item_conditions">États préjudiciables</string>
    <string name="navigation_title_catalog">Catalogue</string>
    <string name="navigation_title_gm">Pour les maîtres du jeu (MJ)</string>
    <string name="navigation_item_magic">Générateur de trésors</string>
    <string name="navigation_title_advanced">Options avancées</string>
    <string name="navigation_refresh_data">Mettre à jour la bibliothèque</string>
    <string name="loaddata_message">En cliquant sur le bouton ci-dessous, l\'application va procéder
        au téléchargement des données depuis internet et les insérer dans la base de données locale.
        Vous pourrez alors utiliser l\'application sans besoin de connexion à Internet. Le processus
        va également effectuer quelques vérifications sur la base de données et corriger d\'éventuels
        problème s\'il y en a.
    </string>
    <string name="loaddata_optimisation">Indexation des sorts en cours. Le processus
        peut prendre plusieurs minutes en fonction de la performance de votre appareil. Ne peut être
        arrêté. Veuillez patienter svp…
    </string>
    <string name="loaddata_forceupdate">Forcer la mise à jour</string>
    <string name="loaddata_start">Démarrer</string>
    <string name="loaddata_stop">Arrêter</string>
    <string name="loaddata_stopping">Attendre</string>
    <string name="loaddata_pleasewait">Veuillez svp attendre la fin du processus…</string>
    <string name="loaddata_waiting">en attente</string>
    <string name="loaddata_noupdate_required">à jour (v%d)</string>
    <string name="loaddata_downloading">fichier en téléchargement</string>
    <string name="loaddata_inprogress">%s/%s (%s) traité</string>
    <string name="loaddata_data_spells">Sorts</string>
    <string name="loaddata_status_error">erreur inconnue</string>
    <string name="loaddata_status_pending">…</string>
    <string name="loaddata_status_notchanged">inchangé</string>
    <string name="loaddata_status_changed">migré avec succés</string>
    <string name="loaddata_status_notfound">introuvable</string>
    <string name="loaddata_status_deleted">introuvable, à été supprimé!</string>
    <string name="pref_title_show_disclaimer">Afficher l\'avertissement</string>
    <string name="pref_description_show_disclaimer_on">Le copyright s\'affiche sur la page d\'accueil</string>
    <string name="pref_description_show_disclaimer_off">Le copyright n\'encombre plus la page d\'accueil</string>
    <string name="pref_title_list_namelong">Nom long dans les listes</string>
    <string name="pref_description_list_namelong_on">Les noms  longs sont affichés dans les listes</string>
    <string name="pref_description_list_namelong_off">Les noms courts sont affichés dans les listes</string>
    <string name="pref_title_showdetails">Détail des compétences, dons, sorts</string>
    <string name="pref_description_showdetails_on">Les détails sont affichés par défaut</string>
    <string name="pref_description_showdetails_off">Les détails sont masqués par défaut</string>
    <string name="pref_sources_default">Cette source ne peut être désactivée</string>
    <string name="pref_sources_all">Si activée: ne tient compte des autres options</string>
    <string name="pref_title_fat_fingers">Agrandir espaces cliquables</string>
    <string name="pref_title_line_height">Espacement vertical (listes)</string>
    <string name="cancel">Annuler</string>
    <string name="source_all">Toutes les sources</string>
    <string name="source_ag">Art de la guerre</string>
    <string name="source_am">Art de la magie</string>
    <string name="source_mca">Manuel du joueur - classes avancées</string>
    <string name="source_mj">Manuel des joueurs</string>
    <string name="source_mjra">Manuel des joueurs - règles avancées</string>
    <string name="source_mr">Manuel des races</string>
    <string name="sheet_menu_main">Profil</string>
    <string name="sheet_menu_skills">Compétences</string>
    <string name="sheet_menu_feats">Dons</string>
    <string name="sheet_menu_spells">Sorts</string>
    <string name="sheet_ability_value">10</string>
    <string name="sheet_ability_seekbar">Glisser pour sélectionner une valeur:</string>
    <string name="sheet_ability_predefined">Ou sélectionner une valeur pré-définie:</string>
    <string name="sheet_ability_calc">Ou utiliser la calculatrice (méthode d\'achat de points):</string>
    <string name="sheet_ability_buttons">Cliquer sur la valeur ci-dessous pour l\'accepter.</string>
    <string name="sheet_ability_calc_button">calculatrice</string>
    <string name="sheet_skills_example_name">Compétence (exemple)</string>
    <string name="sheet_skills_example_total">0</string>
    <string name="sheet_skills_example_ability">DEX</string>
    <string name="sheet_skills_example_ability_bonus">0</string>
    <string name="sheet_classfeatures_filters_title">Filtrer les traits et aptitudes</string>
    <string name="sheet_classfeatures_filter_favorite">Favoris</string>
    <string name="sheet_classfeatures_filter_show">Afficher</string>
    <string name="sheet_classfeatures_filter_show_traits">Traits raciaux</string>
    <string name="sheet_classfeatures_filter_show_auto">Aptitudes de base (classe)</string>
    <string name="sheet_classfeatures_filter_favorite_all">Toutes</string>
    <string name="sheet_classfeatures_filter_favorite_only">Favorites uniquement</string>
    <string name="sheet_classfeatures_filter_apply">Appliquer</string>
    <string name="treasure_type_weak">Faible</string>
    <string name="treasure_type_intermediate">Intermédiaire</string>
    <string name="treasure_type_powerful">Puissant</string>
    <string name="treasure_type_mj">Manuel des joueurs</string>
    <string name="treasure_type_mjra">Règles avancées</string>
    <string name="treasure_table_header_dice">D100</string>
    <string name="treasure_table_header_result">Résultat</string>
    <string name="treasure_table_row_dice">01-04</string>
    <string name="treasure_table_row_result">Armures et boucliers</string>
    <string name="treasure_history">> Arme ou armure > Armure spécifique</string>
    <string name="treasure_back">Revenir</string>
    <string name="treasure_choose_in_list">Choisir ci-dessous OU</string>
    <string name="treasure_random_dice">Aléatoire</string>
</resources>