<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="general_show_disclaimer"
        android:title="@string/pref_title_show_disclaimer"
        android:summaryOn="@string/pref_description_show_disclaimer_on"
        android:summaryOff="@string/pref_description_show_disclaimer_off"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="general_list_namelong"
        android:title="@string/pref_title_list_namelong"
        android:summaryOn="@string/pref_description_list_namelong_on"
        android:summaryOff="@string/pref_description_list_namelong_off"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="general_showdetails"
        android:title="@string/pref_title_showdetails"
        android:summaryOn="@string/pref_description_showdetails_on"
        android:summaryOff="@string/pref_description_showdetails_off"
        />

    <ListPreference
        android:key="general_fatfingers"
        android:title="@string/pref_title_fat_fingers"
        android:summary="%s"
        android:defaultValue="0"
        android:entries="@array/fatfingersTitles"
        android:entryValues="@array/fatfingersValues" />

    <ListPreference
        android:key="general_lineheight"
        android:title="@string/pref_title_line_height"
        android:summary="%s"
        android:defaultValue="0"
        android:entries="@array/lineHeightTitles"
        android:entryValues="@array/lineHeightValues" />

</PreferenceScreen>
