<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">3

    <SwitchPreference
        android:defaultValue="true"
        android:key="source_mj"
        android:title="@string/source_mj"
        android:summary="@string/pref_sources_default"
        android:enabled="false"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="source_all"
        android:title="@string/source_all"
        android:summary="@string/pref_sources_all"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="source_mjra"
        android:title="@string/source_mjra"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="source_mca"
        android:title="@string/source_mca"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="source_mr"
        android:title="@string/source_mr"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="source_ag"
        android:title="@string/source_ag"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="source_am"
        android:title="@string/source_am"
        />

</PreferenceScreen>
