<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/navigation_item_home"
            android:checked="true"/>
        <item
            android:id="@+id/nav_favorites"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/navigation_item_favorites" />
        <item
            android:id="@+id/nav_skills"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/navigation_item_skills" />
        <item
            android:id="@+id/nav_feats"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/navigation_item_feats" />
        <item
            android:id="@+id/nav_spells"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/navigation_item_spells" />

    </group>

    <item android:title="@string/navigation_title_advanced">
        <menu>
            <item
                android:id="@+id/nav_refresh_data"
                android:icon="@android:drawable/stat_notify_sync"
                android:title="@string/navigation_refresh_data" />
        </menu>
    </item>

</menu>
