<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sheet_ability_seekbar" />

    <SeekBar
        android:id="@+id/ability_seekbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:progress="10"
        android:min="1"
        android:max="31"
        android:secondaryProgress="10"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sheet_ability_predefined" />

    <com.wefika.flowlayout.FlowLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ability_predefined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        tools:context=".app.FilterSpellFragment">

        <TextView
            android:id="@+id/ability_predefined_example"
            android:text="@string/sheet_ability_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/text_box"
            android:padding="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"
            android:textStyle="bold"/>

    </com.wefika.flowlayout.FlowLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/sheet_ability_buttons" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/ability_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorWhite"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/ability_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sheet_ability_value"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorWhite"
            android:textSize="36dp"
            android:layout_margin="10dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sheet_ability_calc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

    <Button
        android:id="@+id/ability_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sheet_ability_calc_button"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorWhite"
        android:padding="15dp"
        android:layout_margin="10dp" />

    </LinearLayout>

</LinearLayout>