<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="40dp">

    
    <TableLayout
        android:id="@+id/sheet_skills_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/sheet_skills_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sheet_skills_example_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/sheet_skills_example_name" />

            <TextView
                android:id="@+id/sheet_skills_example_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:textStyle="bold"
                android:text="@string/sheet_skills_example_total"/>

            <TextView
                android:id="@+id/sheet_skills_example_ability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/sheet_skills_example_ability"/>

            <TextView
                android:id="@+id/sheet_skills_example_ability_bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/sheet_skills_example_ability_bonus"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_marginHorizontal="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>

    </TableLayout>

</ScrollView>